@@ -1,0 +1,8 @@
+package com.robertx22.mine_and_slash.uncommon;
+
+import net.minecraft.util.math.BlockPos;
+
+public class Statics {
+    public static BlockPos EMPTY_POS = new BlockPos(0, 0, 0);
+
+}
