@@ -1,5 +1,7 @@
 3.4.1
 * fix unique compatible items
+* fix mob damage level scaling being wrong.
+
 3.4.0
 
 * removed mythic rarity, epics are now purple, rares are now blue. Higher rarities are now much better than lower ones
